No Printing as there are issues.

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                 <a class="nav-link" onclick="addColumn()">Add Column</a>
               </li>
 
-              <li class="nav-item border btn btn-outline-success">
+              <!-- <li class="nav-item border btn btn-outline-success">
                 <a class="nav-link" onclick="window.print()">Print</a>
-              </li>            
+              </li> -->
               
 
             </ul>
