Change HWDP pic

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       }
 
       .HWDP {
-        margin-left: 20px;
-        width: 38px;
+        margin-left: 25px;
+        width: 28px;
         height: 200px;
       }
 
@@ -249,7 +249,27 @@
 
             <div class="card text-bg-dark border-dark border border-0">
               <img 
-                    src="https://res.cloudinary.com/metacortexjohn/image/upload/v1665772162/Drill_collar_straight2-removebg-preview_vsp1vj.png"
+                    src="https://res.cloudinary.com/metacortexjohn/image/upload/v1665773040/drill_pipe2-removebg-preview_zankn3.png"
+                    class="img-fluid rounded-center DP" 
+                  >
+              <div class="card-img-overlay" ondblclick="removeIt(this)">
+                    <textarea 
+                      class="form-control text-white"
+                      rows="7" 
+                      style="background: rgba(0,0,0,0); font-size: 10px;"
+                      >
+                      Drill Pipe
+                      L: 9.5m
+                      C.Top: 4" FH
+                      C.Bottom: 4" FH
+                    </textarea>
+              </div>
+            </div>
+
+
+            <div class="card text-bg-dark border-dark border border-0">
+              <img 
+                    src="https://res.cloudinary.com/metacortexjohn/image/upload/v1684373788/Mostar_DC_SCHM-removebg_d4tgem.png"
                     class="img-fluid rounded-center HWDP" 
                   >
                   <div class="card-img-overlay" ondblclick="removeIt(this)">
@@ -300,26 +320,6 @@
                       >
                       Agitator
                       L: 5.08m
-                      C.Top: 4" FH
-                      C.Bottom: 4" FH
-                    </textarea>
-              </div>
-            </div>
-
-
-            <div class="card text-bg-dark border-dark border border-0">
-              <img 
-                    src="https://res.cloudinary.com/metacortexjohn/image/upload/v1665773040/drill_pipe2-removebg-preview_zankn3.png"
-                    class="img-fluid rounded-center DP" 
-                  >
-              <div class="card-img-overlay" ondblclick="removeIt(this)">
-                    <textarea 
-                      class="form-control text-white"
-                      rows="7" 
-                      style="background: rgba(0,0,0,0); font-size: 10px;"
-                      >
-                      Drill Pipe
-                      L: 9.5m
                       C.Top: 4" FH
                       C.Bottom: 4" FH
                     </textarea>
@@ -577,6 +577,7 @@
   // DP: "https://res.cloudinary.com/metacortexjohn/image/upload/v1665773040/drill_pipe2-removebg-preview_zankn3.png"
   // Reamer: "https://res.cloudinary.com/metacortexjohn/image/upload/v1684260238/reamer3-removebg_dn0xyv.png"
   // NMFC: "https://res.cloudinary.com/metacortexjohn/image/upload/v1684371148/NMFC_SCHM-removebg_v26k0d.png"
+  // SlickDC: "https://res.cloudinary.com/metacortexjohn/image/upload/v1684373788/Mostar_DC_SCHM-removebg_d4tgem.png"
 
 
   let bitHTML = `<div class="card text-bg-dark border-dark border border-0">
@@ -827,7 +828,7 @@
 
   let HWDPHTML = `<div class="card text-bg-dark border-dark border border-0">
               <img 
-                    src="https://res.cloudinary.com/metacortexjohn/image/upload/v1665772162/Drill_collar_straight2-removebg-preview_vsp1vj.png"
+                    src="https://res.cloudinary.com/metacortexjohn/image/upload/v1684373788/Mostar_DC_SCHM-removebg_d4tgem.png"
                     class="img-fluid rounded-center HWDP" 
                   >
                   <div class="card-img-overlay" ondblclick="removeIt(this)">
